--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,55 +7,45 @@
         android:layout_width="match_parent" android:layout_height="match_parent" tools:layout_editor_absoluteY="81dp">
 
     <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/radiosexo"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="parent" app:layout_constraintBottom_toTopOf="parent"/>
-    <RadioButton
-            android:text="Masculino"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/radioButtonM"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-            app:layout_constraintEnd_toStartOf="@+id/radioButtonF" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toTopOf="@+id/calcular" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="51dp" android:layout_marginStart="51dp" android:layout_marginEnd="49dp"
-            android:layout_marginRight="49dp"/>
-    <RadioButton
-            android:text="Feminino"
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:id="@+id/radioButtonF"
-            app:layout_constraintBaseline_toBaselineOf="@+id/radioButtonM"
-            app:layout_constraintStart_toEndOf="@+id/radioButtonM" android:layout_marginEnd="60dp"
-            android:layout_marginRight="60dp" app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_width="227dp"
+            android:layout_height="0dp" android:id="@+id/radiosexo"
+            app:layout_constraintTop_toBottomOf="@+id/text1" android:layout_marginBottom="27dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/calcular"
+            app:layout_constraintStart_toStartOf="parent">
+        <RadioButton
+                android:text="Feminino"
+                android:layout_width="119dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/radioButtonF"
+                app:layout_constraintBaseline_toBaselineOf="@+id/radioButtonM"
+                app:layout_constraintStart_toEndOf="@+id/radioButtonM" android:layout_marginEnd="60dp"
+                android:layout_marginRight="60dp" app:layout_constraintEnd_toEndOf="parent" android:layout_weight="1"/>
+        <RadioButton
+                android:text="Masculino"
+                android:layout_width="116dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/radioButtonM"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+                app:layout_constraintEnd_toStartOf="@+id/radioButtonF" android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toTopOf="@+id/calcular" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="51dp" android:layout_marginStart="51dp" android:layout_marginEnd="49dp"
+                android:layout_marginRight="49dp" android:layout_weight="1"/>
+    </RadioGroup>
     <Button
             android:text="Calcular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/calcular"
             android:onClick="calcularPesoIdeal"
-            app:layout_constraintTop_toBottomOf="@+id/radioButtonM" android:layout_marginBottom="21dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/text"
-            app:layout_constraintStart_toStartOf="parent"/>
-    <TextView
-            android:text="Calcule o peso ideal"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/textView7" android:textSize="30sp"
-            android:layout_marginTop="39dp"
-            android:layout_marginBottom="28dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textInputLayout" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="51dp"
-            android:layout_marginStart="51dp" android:layout_marginEnd="51dp" android:layout_marginRight="51dp"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/radiosexo"
+            android:layout_marginEnd="76dp" android:layout_marginRight="76dp" android:layout_marginBottom="49dp"
+            app:layout_constraintEnd_toEndOf="@+id/radiosexo"/>
     <android.support.design.widget.TextInputLayout
-            android:layout_width="0dp"
+            android:layout_width="214dp"
             android:layout_height="wrap_content"
             android:id="@+id/textInputLayout"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginBottom="31dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/radioButtonM"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="26dp"
-            android:layout_marginStart="26dp" android:layout_marginEnd="26dp" android:layout_marginRight="26dp">
+            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginBottom="27dp"
+            app:layout_constraintEnd_toEndOf="@+id/textView7" app:layout_constraintBottom_toTopOf="@+id/text1">
 
         <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
@@ -64,11 +54,19 @@
     </android.support.design.widget.TextInputLayout>
     <TextView
             android:text="Resultado"
-            android:layout_width="179dp"
+            android:layout_width="131dp"
             android:layout_height="0dp"
             android:id="@+id/text1" android:textSize="25sp"
-            app:layout_constraintTop_toBottomOf="@+id/calcular" android:layout_marginBottom="128dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.619"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginBottom="24dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/radiosexo"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+            android:text="Calcule o peso ideal"
+            android:layout_width="222dp"
+            android:layout_height="0dp"
+            android:id="@+id/textView7" android:textSize="30sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="27dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/textInputLayout" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 </android.support.constraint.ConstraintLayout>
